# MOB_Coursework_2

./: .gitmodules  README.md
data/real_data/: README.md
data/real_data/trace0/: metadata.yaml  trace0.db3
data/real_data/trace1/: metadata.yaml  trace1.db3
data/real_data/trace2/: metadata.yaml
data/real_data/trace3/: metadata.yaml
data/sim_data/simpath1/: metadata.yaml
data/sim_data/simpath2/: metadata.yaml
src/pf_grapher/: package.xml  setup.cfg  setup.py
src/pf_grapher/pf_grapher/: pf_grapher.py
src/pf_localisation/: CMakeLists.txt  package.xml
src/pf_localisation/launch/: example_pf.launch.py  pf_teleop.launch.py
src/pf_localisation/pf_localisation/: node.py  pf.py  pf_base.py  sensor_model.py
